# opentile

./: .gitignore  CHANGELOG.md  README.md  Untitled.ipynb  import.ipynb  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: lint.yml  pytests.yaml  python-package.yml  release.yml  run_pytests.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb
ndpi_tiler/: __init__.py  huffman.py  interface.py  jpeg.py  jpeg_tags.py  ndpi_importer.py  stream.py  svs_tiler.py  turbojpeg_patch.py  utils.py
open_tiler/: svs_tiler.py
opentile/: __init__.py  cache.py  common.py  config.py  exceptions.py  file.py  geometry.py  histech_tiff_tiler.py  interface.py  jpeg.py  metadata.py  ndpi_tiler.py  ome_tiff.py  opentile.py  page.py  philips_tiff_tiler.py  phillips_tiff_tiler.py  svs_tiler.py  tiff_format.py  tiff_image.py  tile_overlap.py  tiler.py  turbojpeg_patch.py  utils.py
opentile/formats/: __init__.py
opentile/formats/argos/: __init__.py  argos_tiff_image.py  argos_tiff_metadata.py  argos_tiff_tiler.py
opentile/formats/histech/: __init__.py  histech_tiff_image.py  histech_tiff_tiled_page.py  histech_tiff_tiler.py
opentile/formats/huron/: __init__.py  huron_tiff_image.py  huron_tiff_metadata.py  huron_tiff_tiler.py
opentile/formats/leica/: __init__.py  leica_scn_image.py  leica_scn_metadata.py  leica_scn_tiler.py
opentile/formats/mikroscan/: __init__.py  mikroscan_tiff_image.py  mikroscan_tiff_metadata.py  mikroscan_tiff_tiler.py
opentile/formats/motic/: __init__.py  motic_tiff_image.py  motic_tiff_metadata.py  motic_tiff_tiler.py
opentile/formats/ndpi/: __init__.py  ndpi_image.py  ndpi_metadata.py  ndpi_page.py  ndpi_tile.py  ndpi_tiler.py
opentile/formats/ome/: __init__.py  ome_tiff_image.py  ome_tiff_page.py  ome_tiff_tiler.py
opentile/formats/philips/: __init__.py  philips_tiff_image.py  philips_tiff_metadata.py  philips_tiff_tiled_page.py  philips_tiff_tiler.py
opentile/formats/qptiff/: __init__.py  qptiff_image.py  qptiff_metadata.py  qptiff_tiler.py
opentile/formats/svs/: __init__.py  svs_image.py  svs_metadata.py  svs_page.py  svs_tiler.py
opentile/formats/trestle/: __init__.py  trestle_tiff_metadata.py  trestle_tiff_tiler.py
opentile/formats/ventana/: __init__.py  ventana_tiff_image.py  ventana_tiff_metadata.py  ventana_tiff_tiler.py
opentile/histech/: __init__.py  histech_metadata.py  histech_tiff_page.py  histech_tiff_tiler.py
opentile/jpeg/: __init__.py  jpeg.py  jpeg_filler.py  turbojpeg_patch.py
opentile/jpeg2000/: __init__.py  jpeg2000.py
opentile/ndpi/: __init__.py  ndpi_cache.py  ndpi_metadata.py  ndpi_page.py  ndpi_tile.py  ndpi_tiler.py
opentile/ome/: ome_tiff_page.py  ome_tiff_tiler.py
opentile/philips/: __init__.py  philips_metadata.py  philips_page.py  philips_tiff_tiler.py
opentile/svs/: __init__.py  svs_metadata.py  svs_page.py  svs_tiler.py
tests/: create_jpeg_data.py  download_test_images.py  filepaths.py  test_argos_tiff_tiler.py  test_cache.py  test_convert.py  test_file_handle_pool.py  test_histech_tiff_tiler.py  test_huffman.py  test_huron_tiff_tiler.py  test_interface.py  test_jpeg.py  test_jpeg2000.py  test_jpeg_filler.py  test_jpegbuffer.py  test_leica_scn_tiler.py  test_metadata.py  test_mikroscan_tiff_tiler.py  test_motic_tiff_tiler.py  test_ndpi_tiler.py  test_ome_tiff_tiler.py  test_philips_tiff_tiler.py  test_phillips_tiff_tiler.py  test_qptiff_tiler.py  test_stream.py  test_svs_tiler.py  test_trestle_tiff_tiler.py  test_turbojpeg_patch.py  test_ventana_tiff_tiler.py
typings/tifffile/: __init__.pyi  __main__.pyi  lsm2bin.pyi  numcodecs.pyi  tiffcomment.pyi  tifffile.pyi  tifffile_geodb.pyi
