[tool.poetry]
name = "opentile"
version = "0.19.0"
description = "Read tiles from wsi-TIFF files"
authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/imi-bigpicture/opentile"
keywords = ["whole slide image", "digital pathology", "tiff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
tifffile = ">=2022.5.4"
numpy = ">=1.22.0"
PyTurboJPEG = "^1.7.3"
Pillow = "^10.1.0"
imagecodecs = ">=2022.12.24"
defusedxml = "^0.7.1"
ome-types = "^0.5.0"
fsspec = "^2024.2.0"
universal-pathlib = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
requests = "^2.28.1"
black = "^24.2.0"
flake8 = "^7.0.0"
codespell = "^2.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
