[project]
name = "opentile"
version = "0.20.0"
description = "Read tiles from wsi-TIFF files"
authors = [
    { name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["whole slide image", "digital pathology", "tiff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "tifffile>=2022.5.4",
    "numpy>=1.22.0",
    "PyTurboJPEG>=1.7.3,<2.0.0",
    "Pillow>=10.1.0,<11.0.0",
    "imagecodecs>=2022.12.24",
    "defusedxml>=0.7.1,<0.8.0",
    "ome-types>=0.5.0,<0.6.0",
    "fsspec>=2024.2.0,<2025.0.0",
    "universal-pathlib>=0.2.1,<0.3.0",
]

[project.urls]
Repository = "https://github.com/imi-bigpicture/opentile"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "requests>=2.28.1,<3.0.0",
    "black>=24.2.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "codespell>=2.2.5,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
