[project]
name = "opentile"
version = "0.24.0"
description = "Read tiles from wsi-TIFF files"
authors = [
    { name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["whole slide image", "digital pathology", "tiff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "cachetools>=5.0.0",
    "tifffile>=2022.5.4",
    "numpy>=1.22.0",
    "PyTurboJPEG>=1.7.3,<2.0.0",
    "Pillow>=10.1.0",
    "imagecodecs>=2022.12.24",
    "defusedxml>=0.7.1",
    "ome-types>=0.5.0",
    "lxml>=4.9.0",
    "fsspec>=2024.2.0",
    "universal-pathlib>=0.2.1",
]

[project.urls]
Repository = "https://github.com/imi-bigpicture/opentile"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-watch>=4.2.0",
    "decoy>=2.1.0",
    "requests>=2.28.1",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "typos>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (replaces the old flake8 dep)
# I: import sorting, UP: pyupgrade, B: bugbear, SIM: simplify
# S: flake8-bandit security rules (the free SAST baseline)
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# S101: asserts are used throughout for type narrowing and internal invariants.
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use pseudo-random test data (S311), md5 for image-hash
# comparison (S324), file handles whose lifetime is managed by a fixture/wrapper
# rather than a context manager (SIM115), and long lines from embedded test data
# such as URLs and checksums (E501).
"tests/**" = ["S311", "S324", "SIM115", "E501"]

[tool.typos.default.extend-words]
ome = "ome"  # OME-TIFF format / ome-types package
siz = "siz"  # JPEG 2000 SIZ marker
subtile = "subtile"  # a (sub-)tile
